force-app/main/default/objects/ExtraInformation__c/ExtraInformation__c.object-meta.xml
<CustomObject>
    <label>Extra Information</label>
    <nameField>
        <displayFormat>Extra Info - {000000}</displayFormat>
        <label>Extra Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extra Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>