force-app/main/default/objects/ExtraInformation__c/fields/FoudantionDate__c.field-meta.xml
<CustomField>
    <fullName>FoudantionDate__c</fullName>
    <label>Foudantion Date</label>
    <type>Date</type>
</CustomField>