force-app/main/default/objects/ExtraInformation__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>