force-app/main/default/objects/ExtraInformation__c/fields/LinkSocialNetwork__c.field-meta.xml
<CustomField>
    <fullName>LinkSocialNetwork__c</fullName>
    <label>Link Social Network</label>
    <type>Url</type>
</CustomField>