force-app/main/default/objects/ExtraInformation__c/fields/SocialNetwork__c.field-meta.xml
<CustomField>
    <fullName>SocialNetwork__c</fullName>
    <label>Social Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Personal Site</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>